--- a/src/gestao/micro/negocios/view/ProductOverview.fxml
+++ b/src/gestao/micro/negocios/view/ProductOverview.fxml
@@ -6,14 +6,14 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="700.0" stylesheets="@Theme.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gestao.micro.negocios.view.ProductOverviewController">
+<AnchorPane id="AnchorPane" prefHeight="649.0" prefWidth="1087.0" stylesheets="@Theme.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gestao.micro.negocios.view.ProductOverviewController">
    <children>
-      <SplitPane dividerPositions="0.36" prefHeight="300.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <SplitPane dividerPositions="0.36430542778288866" prefHeight="300.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <items>
             <TableView fx:id="productTable" prefHeight="399.0" prefWidth="244.0">
               <columns>
-                <TableColumn fx:id="nameColumn" prefWidth="118.0" text="Nome" />
-                <TableColumn fx:id="priceColumn" prefWidth="123.0" text="Preço" />
+                <TableColumn fx:id="nameColumn" prefWidth="194.0" text="Nome" />
+                <TableColumn fx:id="priceColumn" prefWidth="183.0" text="Preço" />
               </columns>
             </TableView>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0" styleClass="background">
