--- a/src/gestao/micro/negocios/view/Login.fxml
+++ b/src/gestao/micro/negocios/view/Login.fxml
@@ -9,7 +9,7 @@
 
 <AnchorPane id="AnchorPane" prefHeight="649.0" prefWidth="1087.0" styleClass="background" stylesheets="@Theme.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gestao.micro.negocios.view.LoginController">
    <children>
-      <Button layoutX="551.0" layoutY="391.0" mnemonicParsing="false" onAction="#handleLimpar" text="Limpar" />
+      <Button layoutX="522.0" layoutY="391.0" mnemonicParsing="false" onAction="#handleRegister" text="Cadastrar" />
       <Button layoutX="654.0" layoutY="391.0" mnemonicParsing="false" onAction="#handleEntrar" text="Entrar" />
       <PasswordField fx:id="password" layoutX="550.0" layoutY="311.0" prefHeight="32.0" prefWidth="198.0" />
       <TextField fx:id="user" layoutX="339.0" layoutY="311.0" prefHeight="32.0" prefWidth="189.0" />
@@ -20,5 +20,6 @@
       </ImageView>
       <Label layoutX="339.0" layoutY="285.0" text="Usuario" />
       <Label layoutX="550.0" layoutY="285.0" text="Senha" />
+      <Button layoutX="411.0" layoutY="391.0" mnemonicParsing="false" onAction="#handleLimpar" text="Limpar" />
    </children>
 </AnchorPane>
