--- a/src/gestao/micro/negocios/view/Fornecedores.fxml
+++ b/src/gestao/micro/negocios/view/Fornecedores.fxml
@@ -38,10 +38,10 @@
             </Pane>
          </children>
       </AnchorPane>
-      <TableView fx:id="productTable" layoutX="307.0" layoutY="364.0" prefHeight="222.0" prefWidth="735.0">
+      <TableView fx:id="providerTable" layoutX="307.0" layoutY="364.0" prefHeight="222.0" prefWidth="735.0">
         <columns>
-          <TableColumn fx:id="tabProvider" prefWidth="352.0" text="Fornecedores" />
-            <TableColumn fx:id="tabDetail" prefWidth="327.0" text="Detalhe do Fornecedor" />
+          <TableColumn fx:id="tabProvider" prefWidth="182.0" text="Fornecedores" />
+            <TableColumn fx:id="tabDetail" prefWidth="497.0" text="Detalhe do Fornecedor" />
             <TableColumn fx:id="tabOrder" minWidth="6.0" prefWidth="55.0" text="Pedidos" />
         </columns>
       </TableView>
@@ -54,7 +54,7 @@
             </Label>
          </children>
       </Pane>
-      <Button layoutX="387.0" layoutY="281.0" mnemonicParsing="false" onAction="#handleProvider" prefHeight="38.0" prefWidth="140.0" text="Novo Fornecedor" />
+      <Button layoutX="387.0" layoutY="198.0" mnemonicParsing="false" onAction="#handleProvider" prefHeight="38.0" prefWidth="140.0" text="Novo Fornecedor" />
       <Button layoutX="805.0" layoutY="281.0" mnemonicParsing="false" onAction="#handleOrder" prefHeight="38.0" prefWidth="140.0" text="Cadastrar Pedido" />
       <Label layoutX="307.0" layoutY="119.0" prefHeight="62.0" prefWidth="299.0" text="Cadastrar Fornecedor" textAlignment="CENTER" textFill="WHITE">
          <font>
@@ -66,5 +66,7 @@
             <Font size="31.0" />
          </font>
       </Label>
+      <Button layoutX="387.0" layoutY="243.0" mnemonicParsing="false" onAction="#handleEditProvider" prefHeight="38.0" prefWidth="140.0" text="Editar Fornecedor" />
+      <Button layoutX="387.0" layoutY="289.0" mnemonicParsing="false" onAction="#handleDeleteProvider" prefHeight="38.0" prefWidth="140.0" text="Excluir Fornecedor" />
    </children>
 </AnchorPane>
