--- a/src/gestao/micro/negocios/view/Produto.fxml
+++ b/src/gestao/micro/negocios/view/Produto.fxml
@@ -4,55 +4,27 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
-<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="600.0" prefWidth="1087.0" style="-fx-background-color: #393351;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gestao.micro.negocios.controller.ProdutoController">
+<AnchorPane id="AnchorPane" prefHeight="550.0" prefWidth="773.0" style="-fx-background-color: #393351;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gestao.micro.negocios.controller.ProdutoController">
    <children>
-      <AnchorPane prefHeight="600.0" prefWidth="262.0" style="-fx-background-color: #484066;">
-         <children>
-            <VBox layoutY="300.0" prefHeight="300.0" prefWidth="262.0">
-               <children>
-                  <Button mnemonicParsing="false" onAction="#menuShowEventos" prefHeight="60.0" prefWidth="262.0" text="Eventos" />
-                  <Button mnemonicParsing="false" onAction="#menuShowEstoque" prefHeight="60.0" prefWidth="262.0" text="Estoque" />
-                  <Button mnemonicParsing="false" onAction="#menuShowFornecedores" prefHeight="60.0" prefWidth="262.0" text="Fornecedores" />
-                  <Button mnemonicParsing="false" onAction="#menuShowClientes" prefHeight="60.0" prefWidth="262.0" text="Clientes" />
-                  <Button mnemonicParsing="false" onAction="#menuShowFinanceiro" prefHeight="60.0" prefWidth="262.0" text="Financeiro" />
-                  <Button mnemonicParsing="false" onAction="#menuShowAdm" prefHeight="60.0" prefWidth="262.0" text="Administrativo" />
-                  <Button layoutX="10.0" layoutY="260.0" mnemonicParsing="false" onAction="#menuLogout" prefHeight="60.0" prefWidth="262.0" text="Sair" underline="true" />
-               </children>
-            </VBox>
-            <ImageView fitHeight="150.0" fitWidth="262.0" layoutY="37.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../../../../images/novologotipo1_simizu_festas_baloes.fw.png" />
-               </image>
-            </ImageView>
-            <Pane layoutY="220.0" prefHeight="80.0" prefWidth="262.0" style="-fx-background-color: #1948b5; -fx-border-radius: 20px;">
-               <children>
-                  <Label layoutX="81.0" layoutY="25.0" prefHeight="30.0" prefWidth="99.0" style="-fx-font-size: 26px; -fx-alignment: center; -fx-font-family: System bol; -fx-text-fill: #ffffff;" text="MENU" textAlignment="RIGHT" />
-               </children>
-            </Pane>
-         </children>
-      </AnchorPane>
-      <TableView fx:id="productTable" layoutX="262.0" layoutY="119.0" prefHeight="481.0" prefWidth="824.0">
+      <TableView fx:id="productTable" layoutX="3.0" layoutY="118.0" prefHeight="465.0" prefWidth="770.0">
         <columns>
-          <TableColumn fx:id="tabName" prefWidth="352.0" text="Descrição" />
-            <TableColumn fx:id="tabInv" prefWidth="114.0" text="Quantidade" />
-            <TableColumn fx:id="tabType" minWidth="0.0" prefWidth="190.0" text="Categoria" />
-            <TableColumn fx:id="tabUnit" minWidth="6.0" prefWidth="90.0" text="Preço Unitário" />
-            <TableColumn fx:id="tabPrice" minWidth="6.0" prefWidth="77.0" text="Preço Venda" />
+          <TableColumn fx:id="tabName" prefWidth="381.0" text="Descrição" />
+            <TableColumn fx:id="tabInv" prefWidth="81.0" text="Quantidade" />
+            <TableColumn fx:id="tabType" minWidth="0.0" prefWidth="130.0" text="Categoria" />
+            <TableColumn fx:id="tabUnit" minWidth="0.0" prefWidth="86.0" text="Preço Unitário" />
+            <TableColumn fx:id="tabPrice" minWidth="6.0" prefWidth="91.0" text="Preço Venda" />
         </columns>
       </TableView>
-      <Pane layoutX="262.0" layoutY="1.0" prefHeight="118.0" prefWidth="824.0">
+      <Pane layoutX="2.0" prefHeight="118.0" prefWidth="770.0">
          <children>
-            <Button layoutX="670.0" layoutY="40.0" mnemonicParsing="false" onAction="#handleDelete" prefHeight="38.0" prefWidth="140.0" text="Excluir" />
-            <Button layoutX="494.0" layoutY="40.0" mnemonicParsing="false" onAction="#handleEdit" prefHeight="38.0" prefWidth="140.0" text="Editar" />
-            <Button layoutX="318.0" layoutY="40.0" mnemonicParsing="false" onAction="#handleCreate" prefHeight="38.0" prefWidth="140.0" text="Cadastrar" />
-            <Label layoutX="45.0" prefHeight="118.0" prefWidth="230.0" text="Estoque" textAlignment="CENTER" textFill="WHITE">
+            <Button layoutX="623.0" layoutY="40.0" mnemonicParsing="false" onAction="#handleDelete" prefHeight="38.0" prefWidth="140.0" text="Excluir" />
+            <Button layoutX="450.0" layoutY="40.0" mnemonicParsing="false" onAction="#handleEdit" prefHeight="38.0" prefWidth="140.0" text="Editar" />
+            <Button layoutX="272.0" layoutY="40.0" mnemonicParsing="false" onAction="#handleCreate" prefHeight="38.0" prefWidth="140.0" text="Cadastrar" />
+            <Label layoutX="14.0" prefHeight="118.0" prefWidth="230.0" text="Estoque" textAlignment="CENTER" textFill="WHITE">
                <font>
                   <Font size="64.0" />
                </font>
