--- a/src/gestao/micro/negocios/view/ProviderDialog.fxml
+++ b/src/gestao/micro/negocios/view/ProviderDialog.fxml
@@ -7,29 +7,54 @@
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="229.0" prefWidth="598.0" styleClass="background" stylesheets="@Theme.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gestao.micro.negocios.controller.ProviderDialogController">
+<AnchorPane id="AnchorPane" prefHeight="367.0" prefWidth="555.0" style="-fx-background-color: #2F2B43;" styleClass="background" stylesheets="@Theme.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gestao.micro.negocios.controller.ProviderDialogController">
    <children>
-      <GridPane layoutY="34.0" prefHeight="152.0" prefWidth="578.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="34.0">
+      <GridPane layoutY="78.0" prefHeight="239.0" prefWidth="525.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="78.0">
         <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="294.0" minWidth="10.0" prefWidth="215.0" />
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="385.0" minWidth="10.0" prefWidth="385.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="294.0" minWidth="10.0" prefWidth="150.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="512.0" minWidth="10.0" prefWidth="375.0" />
         </columnConstraints>
         <rowConstraints>
           <RowConstraints />
-          <RowConstraints />
+          <RowConstraints maxHeight="0.0" minHeight="0.0" prefHeight="0.0" />
+            <RowConstraints maxHeight="52.0" minHeight="10.0" prefHeight="52.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <Label text="Nome" GridPane.rowIndex="2" />
+            <Label text="Nome" textFill="WHITE" GridPane.rowIndex="2">
+               <font>
+                  <Font size="24.0" />
+               </font></Label>
             <TextField fx:id="nomeField" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-            <TextField fx:id="detalheField" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-            <Label text="Descrição:" GridPane.rowIndex="3" />
+            <TextField fx:id="detalheField" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+            <Label text="Descrição:" textFill="WHITE" GridPane.rowIndex="5">
+               <font>
+                  <Font size="24.0" />
+               </font></Label>
+            <Label text="Telefone:" textFill="WHITE" GridPane.rowIndex="4">
+               <font>
+                  <Font size="24.0" />
+               </font>
+            </Label>
+            <TextField fx:id="telefoneField" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+            <Label text="Email:" textFill="WHITE" GridPane.rowIndex="3">
+               <font>
+                  <Font size="24.0" />
+               </font>
+            </Label>
+            <TextField fx:id="emailFIeld" GridPane.columnIndex="1" GridPane.rowIndex="3" />
          </children>
       </GridPane>
-      <Button defaultButton="true" layoutX="359.0" layoutY="186.0" mnemonicParsing="false" onAction="#handleOk" prefHeight="25.0" prefWidth="76.0" text="OK" />
-      <Button layoutX="453.0" layoutY="186.0" mnemonicParsing="false" onAction="#handleCancel" text="Cancelar" />
-      <Label layoutX="239.0" layoutY="14.0" text="Cadastre o Fornecedor" />
+      <Button defaultButton="true" layoutX="370.0" layoutY="327.0" mnemonicParsing="false" onAction="#handleOk" prefHeight="25.0" prefWidth="76.0" styleClass="button3" stylesheets="@../../../../css/Dash.css" text="OK" textFill="WHITE" />
+      <Button layoutX="468.0" layoutY="327.0" mnemonicParsing="false" onAction="#handleCancel" prefHeight="25.0" prefWidth="76.0" styleClass="button3" stylesheets="@../../../../css/Dash.css" text="Cancelar" textFill="WHITE" />
+      <Label layoutX="72.0" layoutY="14.0" text="Cadastre o Fornecedor" textFill="WHITE">
+         <font>
+            <Font size="41.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
